# ic-quickstart-actor-model

./: Cargo.toml  README.md  dfx.json  package-lock.json  package.json  webpack.config.js
src/declarations/ic_quickstart_actor_model/: ic_quickstart_actor_model.did.d.ts  ic_quickstart_actor_model.did.js  index.js
src/declarations/ic_quickstart_actor_model_frontend/: index.js
src/ic_quickstart_actor_model/: Cargo.toml  ic_quickstart_actor_model.did
src/ic_quickstart_actor_model/src/: business_logic.rs  env.rs  lib.rs  lifetime.rs
src/ic_quickstart_actor_model_frontend/src/: App.jsx  Greet.jsx  MainColony.jsx  Players.jsx  index.html
src/wasm_loader/: Cargo.toml  post_deploy.sh
src/wasm_loader/src/: main.rs
